# XTV-SupportBot

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  SETUP.md  config.py  db.py  fix_type.py  main.py  mkdocs.yml  nixpacks.toml  patch_bootstrap.py  patch_bootstrap3.py  patch_bootstrap4.py  patch_bootstrap5.py  patch_integration_test.py  patch_lint.py  patch_lint2.py  patch_rules_dry_run.py  patch_rules_evaluator.py  patch_rules_model.py  patch_test_integration.py  patch_test_integration2.py  pyproject.toml  requirements.txt
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  docs.yml  release.yml
app/: __init__.py  bootstrap.py  config.py  constants.py
app/core/: __init__.py  callback_data.py  context.py  errors.py  filters.py  logger.py  router.py
app/db/: __init__.py  audit.py  broadcasts.py  client.py  contact_links.py  migrations.py  projects.py  schemas.py  tags.py  tickets.py  users.py
app/handlers/: __init__.py  errors.py  start.py
app/handlers/admin/: __init__.py  assign.py  block.py  broadcast.py  contact_links.py  dashboard.py  input_router.py  projects.py  tags.py
app/handlers/topic/: __init__.py  commands.py  reply.py
app/handlers/user/: __init__.py  close.py  feedback.py  history.py
app/middlewares/: __init__.py  admin_guard.py  blocked_mw.py  cooldown_mw.py  logging_mw.py
app/services/: __init__.py  autoclose_service.py  broadcast_service.py  cooldown_service.py  sla_service.py  ticket_service.py  topic_service.py
app/tasks/: __init__.py  autoclose_task.py  scheduler.py  sla_task.py
app/ui/: __init__.py  blockquote.py  card.py  glyphs.py  keyboards.py  progress.py
app/ui/templates/: __init__.py  admin_dashboard.py  broadcast.py  project_wizard.py  ticket_header.py  user_messages.py  user_tickets.py
app/utils/: __init__.py  ids.py  retry.py  text.py  time.py
deploy/compose/: docker-compose.yml  prometheus.yml
deploy/docker/: Dockerfile
deploy/helm/xtv-support/: Chart.yaml  README.md  values.yaml
deploy/k8s/: deployment.yaml
docs/: index.md
docs/architecture/: action-executor.md  events.md  external-directory.md  overview.md  plugins.md
docs/features/: admin-accounts.md  admin-menu.md  agent-cockpit.md  ai.md  analytics.md  automation-rules.md  external-user-directory.md  integrations.md  macros-and-kb.md  project-templates.md  rbac-and-teams.md  user-experience.md  web-app.md
docs/getting-started/: configuration.md  first-run.md  install.md
docs/ops/: deploy-webapp.md  deployment.md  gdpr.md  observability.md  railway.md
docs/reference/: api-auth.md  api-quickstart.md  api-write.md  api.md  commands.md  env.md  webhooks.md
plugins/: admin.py  admin_actions.py  admin_extras.py  admin_panel.py  contact.py  extras.py  feedback_handler.py  reply_handler.py  start.py  user.py
scripts/: rotate_secrets.py
src/xtv_support/: __init__.py  __main__.py  version.py
src/xtv_support/api/: __init__.py  auth_webapp.py  deps.py  password.py  ratelimit.py  security.py  server.py  sessions.py
src/xtv_support/config/: __init__.py  flags.py  i18n.py  runtime.py  settings.py
src/xtv_support/core/: __init__.py  bootstrap.py  callback_data.py  callback_v2.py  constants.py  container.py  context.py  errors.py  events.py  filters.py  i18n.py  logger.py  rbac.py  router.py  state.py  ui_mode.py
src/xtv_support/domain/: __init__.py  enums.py
src/xtv_support/handlers/: __init__.py  errors.py  start.py
src/xtv_support/infrastructure/: __init__.py
src/xtv_support/locales/: bn.yaml  de.yaml  en.yaml  es.yaml  gu.yaml  hi.yaml  mr.yaml  pa.yaml  ru.yaml  ta.yaml  te.yaml  ur.yaml
src/xtv_support/middlewares/: __init__.py  admin_guard.py  blocked_mw.py  cooldown_mw.py  i18n_mw.py  logging_mw.py  rbac_mw.py
src/xtv_support/plugins/: __init__.py  base.py  loader.py  registry.py
src/xtv_support/services/: __init__.py
src/xtv_support/tasks/: __init__.py  analytics_task.py  autoclose_task.py  scheduler.py  sla_task.py  topic_cleanup_task.py
src/xtv_support/ui/: __init__.py
src/xtv_support/utils/: __init__.py  ids.py  retry.py  text.py  time.py
tests/: __init__.py  conftest.py  test_cooldown.py  test_external_directory_config.py  test_external_directory_secrets.py  test_filters.py  test_ui_card.py
tests/e2e/: __init__.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_apikeys.py  test_attachments.py  test_auth.py  test_broadcasts.py  test_content.py  test_external_directory.py  test_i18n_and_limits.py  test_projects.py  test_rbac.py  test_settings_api.py  test_ticket_creation.py  test_topic_cleanup.py
tests/unit/: __init__.py
tests/unit/api/: __init__.py  test_admin_accounts_repo.py  test_auth_webapp.py  test_me_route.py  test_password.py  test_registration_keys.py  test_security.py  test_sessions.py  test_spa_mount.py
tests/unit/config/: __init__.py  test_flags.py  test_i18n_loader.py
tests/unit/core/: __init__.py  test_callback_v2.py  test_container.py  test_events.py  test_i18n.py  test_rbac.py  test_state.py  test_ui_mode.py
tests/unit/domain/: __init__.py  test_enums.py  test_events.py  test_models.py
tests/unit/handlers/: __init__.py
tests/unit/infrastructure/: __init__.py
tests/unit/middlewares/: __init__.py  test_i18n_mw.py
tests/unit/plugins/: __init__.py  test_loader.py  test_registry.py  test_start_captcha.py
tests/unit/services/: __init__.py
tests/unit/ui/: test_admin_panel.py  test_agent_inbox.py  test_ask_and_confirm.py  test_onboarding_panel.py  test_panel_primitive.py  test_ticket_header_keyboards.py
tools/: rewrite_imports.py
web/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: main.tsx
web/src/components/: AdminLayout.tsx  Attachment.tsx  ConfirmDialog.tsx  Layout.tsx  ProfileMenu.tsx  UserLayout.tsx
(+324 files in other folders)
