[project]
name = "xtv-support"
version = "0.9.0"
description = "XTV-SupportBot — enterprise-grade Telegram support / feedback / contact bot: forum-topic tickets, RBAC, macros, KB, AI assistance, analytics, broadcasts, plugins."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "XTV Public License" }
authors = [
    { name = "davdxpx" },
]
maintainers = [
    { name = "davdxpx" },
]
keywords = [
    "telegram",
    "bot",
    "support",
    "helpdesk",
    "feedback",
    "tickets",
    "forum-topics",
    "pyrofork",
    "mongodb",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Office/Business :: Groupware",
    "Typing :: Typed",
]
dependencies = [
    "pyrofork>=2.3.60",
    "tgcrypto>=1.2.5",
    "motor>=3.5.0",
    "pymongo>=4.8.0",
    "dnspython>=2.6.1",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.1",
    "structlog>=24.1.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
redis = ["redis[hiredis]>=5.0.0"]
ai = ["litellm>=1.40.0"]
api = ["fastapi>=0.110.0", "uvicorn[standard]>=0.29.0"]
storage = ["boto3>=1.34.0"]
observability = [
    "prometheus-client>=0.20.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp>=1.25.0",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.25.0",
]
all = [
    "xtv-support[redis,ai,api,storage,observability,dev]",
]

[project.urls]
Homepage = "https://github.com/davdxpx/XTV-SupportBot"
Repository = "https://github.com/davdxpx/XTV-SupportBot"
Issues = "https://github.com/davdxpx/XTV-SupportBot/issues"
Changelog = "https://github.com/davdxpx/XTV-SupportBot/blob/main/CHANGELOG.md"
"XTV Network" = "https://t.me/XTVglobal"

[project.scripts]
xtv-support = "main:entrypoint"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "PL", "ASYNC"]
ignore = ["PLR0913", "PLR2004"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.12"
strict_optional = true
ignore_missing_imports = true
