[project]
name = "xtv-support"
version = "0.9.0"
description = "XTV-SupportBot — enterprise-grade Telegram support / feedback / contact bot: forum-topic tickets, RBAC, macros, KB, AI assistance, analytics, broadcasts, plugins."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "XTV Public License" }
authors = [
    { name = "davdxpx" },
]
maintainers = [
    { name = "davdxpx" },
]
keywords = [
    "telegram",
    "bot",
    "support",
    "helpdesk",
    "feedback",
    "tickets",
    "forum-topics",
    "pyrofork",
    "mongodb",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Office/Business :: Groupware",
    "Typing :: Typed",
]
dependencies = [
    "pyrofork>=2.3.60",
    "tgcrypto>=1.2.5",
    "motor>=3.5.0",
    "pymongo>=4.8.0",
    "dnspython>=2.6.1",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.1",
    "structlog>=24.1.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
redis = ["redis[hiredis]>=5.0.0"]
ai = ["litellm>=1.40.0"]
api = ["fastapi>=0.110.0", "uvicorn[standard]>=0.29.0"]
storage = ["boto3>=1.34.0"]
observability = [
    "prometheus-client>=0.20.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp>=1.25.0",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.25.0",
]
all = [
    "xtv-support[redis,ai,api,storage,observability,dev]",
]

[project.urls]
Homepage = "https://github.com/davdxpx/XTV-SupportBot"
Repository = "https://github.com/davdxpx/XTV-SupportBot"
Issues = "https://github.com/davdxpx/XTV-SupportBot/issues"
Changelog = "https://github.com/davdxpx/XTV-SupportBot/blob/main/CHANGELOG.md"
"XTV Network" = "https://t.me/XTVglobal"

[project.scripts]
xtv-support = "xtv_support:entrypoint"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["xtv_support*"]

[tool.setuptools.package-data]
"xtv_support" = ["locales/*.yaml", "locales/*.yml", "py.typed"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# v0.9 keeps the ruleset tight around real bugs (F = unused imports /
# undefined names, E = pycodestyle errors, ASYNC = asyncio gotchas) and
# leaves stylistic Pylint (PL*) / naming (N*) opinions off. Expands in
# v1.0 once the codebase has settled.
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]
ignore = [
    # Line-length — format handles the common case; a few long literals
    # (prompt strings, generated import-rewrites) stay over the limit
    # deliberately.
    "E501",
    # FastAPI uses Depends() / Query() in argument defaults — idiomatic,
    # not a real "mutable default" bug.
    "B008",
    # ``pytest.raises(Exception)`` — we assert "must not raise anything"
    # in a handful of tests and the narrow form hurts readability.
    "B017",
    # Non-fatal ``try/except: pass`` writes are intentional in a few
    # places; contextlib.suppress adds an import + indent for no gain.
    "SIM105",
    # Collapsible if/elif/ternary — pattern is sometimes clearer when
    # expanded; leave it to human taste.
    "SIM102",
    "SIM108",
    "SIM114",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: tests that need mongomock / fakeredis",
    "e2e: end-to-end tests, disabled by default",
]

[tool.coverage.run]
source = ["src/xtv_support"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.12"
mypy_path = ["src"]
packages = ["xtv_support"]
strict_optional = true
ignore_missing_imports = true
